# mlxbench

./: .gitignore  CLAUDE.md  README.md  mlxbench.py  pyproject.toml
src/mlxbench/: __init__.py  benchmark.py  cli.py  hwinfo.py
