[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlxbench"
version = "0.1.0"
description = "Benchmarking tool for Apple MLX-based language models"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.9"
dependencies = [
    "mlx-lm>=0.12.0",
    "numpy",
    "tiktoken",
    "transformers>=4.52.4"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.scripts]
mlxbench = "mlxbench.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/mlxbench"
Issues = "https://github.com/yourusername/mlxbench/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mlxbench"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]